# game

./: .gitignore  CMakeLists.txt  README.md  map.txt  pallet2.aseprite
.cache/clangd/index/: GAme.cpp.9F5AA5795275ABFD.idx  (+7 more)
Game/: Camera.cpp  Camera.hpp  CollisionManager.h  CommandSystem.cpp  CommandSystem.hpp  Console.cpp  Console.hpp  Debug.h  ECS.h  EntityFactory.cpp  EntityFactory.hpp  EntityLayer.h  EventSystem.cpp  EventSystem.hpp  FastNoise.cpp  FastNoise.h  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  GuiManager.cpp  GuiManager.hpp  Inventory.cpp  Inventory.hpp  Item.cpp  Item.h  Item.hpp  ItemStack.cpp  ItemStack.hpp  LayerManager.h  Map.cpp  Map.hpp  MessagingSystem.cpp  MessagingSystem.hpp  Player.cpp  Player.hpp  PositionComponent.h  Resource.cpp  Resource.hpp  ResoureTypes.cpp  (+25 more)
Game.xcodeproj/: project.pbxproj
Game/ECS/: ChestComponent.h  CollisionComponent.h  Component.cpp  Components.h  DirectionComponent.h  ECS.cpp  ECS.h  Entity.cpp  EntityManager.cpp  FurnaceComponent.h  GridComponent.h  GuiComponent.h  HealthComponent.h  InventoryComponent.h  ItemComponent.h  PickupComponent.h  PlayerAnimationComponent.h  PlayerGuiComponent.h  PlayerInputComponent.h  PositionComponent.h  ResourceComponent.h  SizeComponent.h  SpriteComponent.h  TableComponent.h  TileComponent.h
Game/Gui/: GuiElements.cpp  GuiElements.hpp  GuiManager.cpp  GuiManager.hpp  MainMenu.cpp  MainMenu.hpp  PauseMenu.cpp  PauseMenu.hpp
Game/GuiSystem/: GuiManager.cpp  GuiManager.hpp  Guis.h  HotbarGui.h  InventoryGui.h  TableGui.h
Game/LayerSystem/: CameraLayer.h  DebugLayer.h  EntityLayer.h  GuiLayer.h  LayerManager.cpp  LayerManager.h  LayerManager.hpp  Layers.h  MapLayer.h  TileLayer.h
assets/sprites/: bow.aseprite  new_player.aseprite
include/SDL3/: SDL_revision.h
json/: Animals.json  Clusters.json  CraftingRecipes.json  Decorations.json  Generation.json  Grounds.json  ItemKinds.json  ItemProperties.json  Items.json  Particles.json  Resources.json  Structures.json  Tiles.json  Walls.json
libs/: libSDL3.0.dylib  libSDL3_image.0.dylib  libSDL3_mixer.0.dylib  libSDL3_ttf.0.dylib
saves/: .binary  save.binary  world.binary
saves/world1/: save.binary
saves/world2/: save.binary
saves/world3/: save.binary
src/: Collider.hpp  ComponentArray.hpp  ComponentId.hpp  ComponentManager.hpp  Components.hpp  Console.cpp  Console.hpp  DebugScreen.hpp  Design.cpp  Design.hpp  Distribution.cpp  Distribution.hpp  Dungeon.hpp  Dungeon2.hpp  Dungeon3.hpp  ECS.hpp  ECS_types.hpp  EntityFactory.cpp  EntityFactory.hpp  EntityManager.cpp  EntityManager.hpp  Events.hpp  Game.cpp  Game.hpp  GenerationTree.hpp  GuiElement.cpp  GuiElement.hpp  GuiManager.hpp  Item.hpp  Map.cpp  Map.hpp  Minimap.hpp  ParticleSystem.cpp  ParticleSystem.hpp  ResourceTemplates.cpp  ResourceTemplates.hpp  Sprite.cpp  Sprite.hpp  System.hpp  SystemId.hpp  (+12 more)
src/Systems/: AnimalAiSystem.hpp  CameraSystem.hpp  CollisionSystem.hpp  ControllerSystem.hpp  CreatureAnimationSystem.hpp  CreatureMovementSystem.hpp  EntityDrawSystem.hpp  GravitySystem.hpp  ItemPickupSystem.hpp  ItemSystem.hpp  SpriteSystem.hpp  TileDrawSystem.hpp  systems.hpp
src/dylib/: test.cpp  test.hpp
src/ecs/: ComponentArray.hpp  ComponentManager.hpp  Components.hpp  ECS.hpp  ECS_types.hpp  EntityManager.hpp  System.hpp  SystemManager.hpp  definitions.hpp  ecs2.hpp  systems.hpp  systems_fwd.hpp
src/framework/: Camera.hpp  Events.hpp  FileWatcher.cpp  FileWatcher.hpp  SoundManager.cpp  SoundManager.hpp  Sprite.cpp  Sprite.hpp  TextManager.cpp  TextManager.hpp  TextureManager.cpp  TextureManager.hpp  Window.cpp  Window.hpp
src/gui/: Command.cpp  Command.hpp  Console.cpp  Console.hpp  GuiElement.cpp  GuiElement.hpp  GuiManager.cpp  GuiManager.hpp  Menu.cpp  Menu.hpp  Minimap.cpp  Minimap.hpp
src/item/: Crafting.cpp  Crafting.hpp  Item.cpp  Item.hpp  ItemTemplates.cpp  ItemTemplates.hpp  Item_types.hpp  Loot.cpp  Loot.hpp
src/templates/: AnimalTemplates.cpp  AnimalTemplates.hpp  ClusterTemplates.cpp  ClusterTemplates.hpp  DecorTemplates.cpp  DecorTemplates.hpp  ResourceTemplates.cpp  ResourceTemplates.hpp  StructureTemplates.cpp  StructureTemplates.hpp
src/utils/: collider.hpp  colour.hpp  definitions.hpp  direction.hpp  distribution.hpp  enum.hpp  json.hpp  lerp.hpp  logger.hpp  pair.hpp  pathfinding.hpp  random.hpp  serialiser.hpp  shape.hpp  strings.hpp  typedefs.hpp  utils.hpp  vec.hpp
src/world/: Chunk.cpp  Chunk.hpp  ChunkManager.cpp  ChunkManager.hpp  Environment.cpp  Environment.hpp  Generation.cpp  Generation.hpp  Map.cpp  Map.hpp  Realm.cpp  Realm.hpp  RealmManager.cpp  RealmManager.hpp  Tile.cpp  Tile.hpp  Time.hpp  World.cpp  World.hpp
(+57 files in other folders)
